0.4.15/_sources/gallery/add_image_transformed.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_image_transformed.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_add_image_transformed.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_image_transformed.py:


Add image transformed
=====================

Display one image using the add_image API.

.. GENERATED FROM PYTHON SOURCE LINES 7-17



.. image-sg:: /gallery/images/sphx_glr_add_image_transformed_001.png
   :alt: add image transformed
   :srcset: /gallery/images/sphx_glr_add_image_transformed_001.png
   :class: sphx-glr-single-img





.. code-block:: default


    from skimage import data
    import napari


    # create the viewer with an image
    viewer = napari.view_image(data.astronaut(), rgb=True, rotate=45)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_image_transformed.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: add_image_transformed.py <add_image_transformed.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: add_image_transformed.ipynb <add_image_transformed.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
